--- a/android/build.gradle
+++ b/android/build.gradle
@@ -8,7 +8,7 @@ buildscript {
   }
 
   dependencies {
-    classpath "com.android.tools.build:gradle:7.2.1"
+    classpath "com.android.tools.build:gradle:8.7.3"
     // noinspection DifferentKotlinGradleVersion
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
   }
@@ -93,8 +93,10 @@ dependencies {
 
   implementation "com.github.bumptech.glide:glide:4.16.0"
   implementation "androidx.core:core-ktx:1.8.0"
+  implementation "com.facebook.react:react-android:+"
 
   // Includes the HERE SDK only at compile time to prevent errors
   // The library must also be set in the app build.gradle file using "implementation"
-  compileOnly fileTree(dir: file("$rootDir/heresdk"), include: ['*.aar'])}
+  compileOnly fileTree(dir: file("$rootDir/heresdk"), include: ['*.aar'])
+}
 
