--- a/example/package.json
+++ b/example/package.json
@@ -12,12 +12,14 @@
     "build:ios": "cd ios && xcodebuild -workspace HereExploreExample.xcworkspace -scheme HereExploreExample -configuration Debug -sdk iphonesimulator CC=clang CPLUSPLUS=clang++ LD=clang LDPLUSPLUS=clang++ GCC_OPTIMIZATION_LEVEL=0 GCC_PRECOMPILE_PREFIX_HEADER=YES ASSETCATALOG_COMPILER_OPTIMIZATION=time DEBUG_INFORMATION_FORMAT=dwarf COMPILER_INDEX_STORE_ENABLE=NO"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^3.4.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "react": "18.2.0",
     "react-native": "0.75.4",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.20.0",
+    "react-native-here-explore-example": "file:",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.15.5",
     "react-native-safe-area-context": "^4.11.0",
